# rubiksauto

./: CMakeLists.txt  README.md  contour.h  extraction.cpp  extraction.h  image.h  rubiks.h  rubiksauto.cpp
report/: rapportModal.tex
